--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="flexbox">
-        <h1>Tik Tak Toe</h1>
+        <h1>Tic Tac Toe</h1>
         <div class="middle">
             <div class="cross"></div>
             <img class="bgcool" src="bgcool.png" alt="">
